# fastapi-otel-demo

./: README.md  log-desktop.yaml  log-docker.yaml  pyproject.toml
fastapi_otel_demo/: main.py
